tests/lit/tcheck/funcall05.isa
// RUN: not %iii --batchmode %s | filecheck %s
// Copyright (C) 2025-2025 Intel Corporation

function F(x : Integer, y : Integer := 0, z : Integer);

function main() -> Integer
begin
    F(0, 1, 2, p=>3);
    // CHECK: Type error: named argument 'p' does not match any argument of function 'F(x, y, z)'
end
